frontend/src/styles.scss
:root {
  // general colors
  --color-mute: #333333;
  --color-black: #000000;
  --color-white: #FFFFFF;
  --color-red: red;
  // for all pages
  --pages-color-primary: #fdfeff !important;
  --pages-color-secondary: #fdfeff !important;
  --pages-color-tertiary: #e9ecef !important;
  // message component
  --message-alert-success-color: #28a745;
  --message-alert-fail-color: #dc3545;
  // inputs background
  --inputs-background-color: #F0F0F0;
  // cart and card components
  --cart-quantity-selector-bg-color: #d1d1d1;
  --cart-item-bg-color: #f8f9fa;
  --cart-order-bg-color: #f8f9fa;
  --cart-empty-state-title-color: #09474e;
  --cart-empty-state-paragraph-color: #333333;
  // paginator
  --paginator-bg-color: #ffff;

  // page not found component
  --page-not-found-bg-color: #868e96;
  --page-not-found-btn-shadow-color: #b62525;
  --page-not-found-btn-bg-color: #FFD639;
  --page-not-found-circle1-color: rgba(224, 49, 49, 0.5);
  --page-not-found-circle3-color: rgba(103, 65, 217, 0.5);
}
// font
@font-face {
  font-family: 'Inter';
  src: url('../public/assets/fonts/Inter.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}
$font-family-sans-serif: Inter;
// var for styling pagination
:root {
  --mdc-plain-tooltip-supporting-text-size: 1.1rem;
  --mdc-icon-button-icon-size: 2.6rem;
}
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  overflow: hidden !important;
}
body {
  color: #000;
  font-size: 1.6rem;
  font-weight: 400;
  overflow: hidden !important;
}
.text-yellow {
  color: #ffc107 !important;
}
.container-fluid {
  background-color: var(--pages-color-secondary);
}
/* GLOBAL STYLES FOR NAVIGATION */
.navbar {
  background-color: var(--pages-color-secondary);
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2), 0 .5px 3px rgba(0, 0, 0, 0.2);
}
.navbar-nav {
  font-size: 1.75rem;
}
.search-form {
  position: relative;
  width: 50%;
}
.search-btn {
  position: absolute;
  top: .7rem;
  left: 0;
}
.search-icon {
  font-size: 2rem;
}
@media(max-width: 75em) {
  .search-form {
    width: 40%;
  }
  .search-icon {
    font-size: 1.6rem;
  }
}
@media(max-width: 62em) {
  .search-form {
    width: 30%;
  }
}
@media (max-width: 48em) {
  .search-icon {
    font-size: 1.6rem;
  }
}
//







/* CUSTOM BOOTSTRAP GOES HERE */
$secondary: #bbb;
$dark: #000;


// Spacing
$spacer: 1rem !default;
$spacers: (
  0: 0,
  1: $spacer * 0.25,
  2: $spacer * 0.5,
  3: $spacer,
  4: $spacer * 1.5,
  5: $spacer * 3,
  6: $spacer * 6,
  7: $spacer * 8,
  8: $spacer * 12,
  9: $spacer * 14,
  10: $spacer * 16
) !default;
$enable-negative-margins: true;


/* Styling the pagination */
.mat-mdc-select-value-text {
  font-size: 1.4rem !important;
}
.mdc-list-item__primary-text {
  text-align: center !important;
  font-size: 1.4rem !important;
}
#mat-paginator-page-size-label-0 {
  display: none !important;
  visibility: hidden !important;
}
.mat-mdc-paginator-icon {
  font-size: 2.6rem !important;
}

.mat-mdc-paginator-range-label {
  display: none !important;
  visibility: hidden !important;
}
@import "../node_modules/@angular/material/prebuilt-themes/azure-blue.css";

/* Importing Bootstrap SCSS file. */
@import 'bootstrap/scss/bootstrap';

